# sdl2-win-game-dev

./: .gitignore  CMakeLists.txt  README.md  main.cpp
